--- a/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.scss
+++ b/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.scss
@@ -26,6 +26,9 @@ nav a {
 .minw-30 {
     min-width: 30px;
 }
+.minw-60 {
+    min-width: 60px;
+}
 
 .ng-select.select-currencies {
     color: yellowgreen;
