--- a/src/app/layout/wallets/wallets.component.scss
+++ b/src/app/layout/wallets/wallets.component.scss
@@ -22,3 +22,9 @@
 .exchange-user-wallet {
     overflow-x: auto;
 }
+
+.balance-table {
+    border-left-color: #5bc0de !important;
+    border-left: 0.25rem solid;
+    border-radius: 0.25rem !important;
+}
