Add payment information in Pro plan info

--- a/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
+++ b/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
@@ -14,7 +14,8 @@
                     </div>
                     <div *ngIf="isIncludingProPlanOpportunities === false" class="d-block">
                         You're using Free plan which does not show opportunities above {{freePlanProfitPercentCutOff}}%. To join Pro plan, ping @mikolaj grzaslewicz on autocoin <a
-                        href="https://t.me/joinchat/DQ56VEbfV3uIQlrJphtLbw" target="_blank">telegram group</a> or send an email to mikolaj.grzaslewicz@gmail.com
+                        href="https://t.me/joinchat/DQ56VEbfV3uIQlrJphtLbw" target="_blank">telegram group</a> or send an email to mikolaj.grzaslewicz@gmail.com.
+                        Currently Pro plan is 10 USDT/month. You can make a decision up to 7 days after payment - to stay with Pro plan or have a refund and stay with Free one
                     </div>
                 </div>
             </div>
